# Ciabatta

./: .gitignore  AI.md  AI_Augments.md  ANALYZE.md  Cargo.toml  Dockerfile  LICENSE  README.md  REQUIREMENTS.md  docker-compose.yml  package.json  turbo.json
.ciabatta/: ciabatta.toml
.ciabatta/ai/: brain.json
.ciabatta/ai/conversations/: 2026-07-13T23-08-31-433542989-04-00.json  2026-07-13T23-23-15-098192558-04-00.json  2026-07-13T23-35-54-637770029-04-00.json  2026-07-13T23-43-25-960758885-04-00.json  2026-07-14T00-02-08-832743353-04-00.json  2026-07-14T00-18-27-432494052-04-00.json  (+3 more)
.github/workflows/: ci.yml  pages.yml  release.yml
frontend/: deploy-conditional-steps.html  deploy-env-files.html  deploy-env-select.html  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: install.ps1  install.sh
frontend/src/: main.js  style.css
install/: install.ps1  install.sh
src/: ci.rs  cli.rs  config.rs  configure.rs  environment.rs  git.rs  main.rs  package.json  runner.rs
src/ai/: brain.rs  burnin.rs  compaction.rs  edit.rs  index.html  jobs.rs  mod.rs  pdf.rs  provider.rs  server.rs  session.rs  tools.rs  tui.rs
src/analyze/: cache.rs  index.html  mod.rs  requirements.rs  scan.rs  server.rs
src/deploy/: builder.html  engine.rs  index.html  mod.rs  server.rs
src/registry/: artifactory.rs  browse.rs  docker.rs  ecr.rs  mod.rs  nexus.rs  s3.rs
src/todo/: index.html  mod.rs  server.rs
src/tui/: app.rs  browser.rs  mod.rs  ui.rs
src/usb/: capture.rs  index.html  mod.rs  server.rs
src/watch/: index.html  mod.rs  server.rs
(+16 files in other folders)
